# canonic

./: .gitignore  ANTIGRAVITY.md  LICENSE  README.md  afterPack.js  index.html  install.sh  package-lock.json  package.json  playwright.config.js  playwright.config.mjs  pr_diff.txt  vite.config.js
.canonic/trash/: e6fcbd8c-178c-4250-8781-f492070ef487  index.json
.github/: dependabot.yml
.github/workflows/: build-arm64-linux.yml  build-flatpak.yml  build-postmarketos.yml  pr-validate.yml  release.yml  version-bump.yml
docs/: CONTRIBUTING.md  HOWTO.md  TODO.md
docs/specs/: 2026-05-03-agent-integration-design.md  2026-05-05-network-discovery-design.md  2026-05-05-network-discovery-plan.md  DECISIONS.md  REQUIREMENTS.md  external-git-repo-design.md  usage-logging-spec.md
electron/: agent-presets.js  agent-runner.js  api-server.js  comment-sync.js  config.js  diff.js  discovery.js  fileIndex.js  git.js  main.js  mcp-server.js  preload.js  pty-runner.js  recents.js  search.js  session-store.js  share.js  versions.js  workspace-search.js
flatpak/: ai.canonic.app.metainfo.xml  ai.canonic.app.yml
homebrew/: README.md
homebrew/Casks/: canonic.rb
public/demo/: config.json
scripts/: sync-secrets.sh
src/: main.js  tauri-bridge.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  diff.rs  discovery.rs  lib.rs  mcp.rs  server.rs
src/assets/: main.css
src/components/: AIChat.vue  BranchMenu.vue  CommentsPanel.vue  CommitModal.vue  Editor.vue  FileTree.vue  (+9 more)
(+113 files in other folders)
