[package]
name = "app"
version = "0.2.5-alpha"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
portable-pty = "0.8"
trash = "5.0"
mdns-sd = "0.20"
walkdir = "2.5"
regex = "1.10"
uuid = { version = "1.8", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio-stream = "0.1"
if-addrs = "0.7"
urlencoding = "2.1"
rand = "0.8"
window-vibrancy = "0.5.2"
notify = "8.2.0"
pulldown-cmark = "0.10"
ammonia = "4.0.1"
rustc-hash = "2.1.2"
chrono = { version = "0.4", features = ["serde"] }



